--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/weather_app
-spring.datasource.username=root
-spring.datasource.password=onkar@123
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/weather_app}
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:onkar@123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 # OpenWeatherMap API Key (Placeholder)
-weather.api.key=18304d97c5044377b1b175431252011
+weather.api.key=${WEATHER_API_KEY:18304d97c5044377b1b175431252011}
