--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${PORT:8080}
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/weather_app}
 spring.datasource.username=${MYSQLUSER:root}
 spring.datasource.password=${MYSQLPASSWORD:onkar@123}
